Fixed button layout issue

--- a/index.css
+++ b/index.css
@@ -15,11 +15,10 @@ body{
     display: flex;
     justify-content: space-around;
     text-align: center;
-    height: 300px;
     width: 500px;
     background-color: #003566;
-    margin: auto;
-    margin-top: 20px;
+    margin: 20px auto;
+    padding-bottom: 20px;
     border: 3px solid white;
 }
 
